# term4-polinoms

./: CMakeLists.txt  DOCUMENTATION.md  README.md
main/: CMakeLists.txt  main.cpp
polinoms/: CMakeLists.txt  TAVLTreeTable.hpp  TArrayTable.hpp  THashTable.hpp  TListTable.hpp  TMonom.cpp  TMonom.hpp  TOrderedArrayTable.hpp  TPolinom.cpp  TPolinom.hpp  TPolinomManager.hpp  TPostfixCalculator.hpp  TRedBlackTree.hpp  TTable.hpp
qt_gui/: CMakeLists.txt  ExpressionWidget.cpp  ExpressionWidget.h  MainWindow.cpp  MainWindow.h  PolynomialWidget.cpp  PolynomialWidget.h  README.md  TableWidget.cpp  TableWidget.h  main.cpp
test/: CMakeLists.txt  test_tables.cpp  test_tmonom.cpp  test_tpolinom.cpp
